@@ -1,3 +1,4 @@
+* Show reconciled date on invoice
 * Make description on invoice line optional
 
 Version 4.6.0 - 2017-10-30
